--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Закрывающий тег</title>
     <link rel="icon" href="./images/favicon.ico" sizes="any" />
     <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
-    <link rel="apple-touch-icon" href="./images/apple-icon.png" />
+    <link rel="mobile-version-icon" href="./images/mobile-version-icon.png" />
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/variables.css" />
     <link rel="stylesheet" href="./styles/globals.css" />
@@ -17,7 +17,9 @@
     <script src="./scripts/set-theme.js"></script>
   </head>
   <body class="page">
-    <header class="header">
+    <header class="header header__container">
+      <a class="header__emblem" href="#">&lt;/html&gt;</a>
+      <h1 class="header__title">закрывающий тег</h1>
       <nav class="theme-menu header__theme-menu">
         <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
         <ul class="theme-menu__list">
@@ -44,7 +46,249 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main class="main">
+      <article class="content__decor__card">
+        <h2 class="content__title">
+          Фритрек и нулевой спринт: Подготовка к работе
+        </h2>
+        <div>
+          <img
+            src="./images/image.png"
+            alt="грузовичок как олицитворение 'тебя' в самом начале своего пути"
+          />
+          <!-- <span class="card__image-label">&lt;/HTML&gt;</span> -->
+        </div>
+        <div class="content__text__card">
+          <p>
+            Это было самое начало пути. На этом этапе важно было проникнуться
+            основами и настроиться на учёбу. И, возможно, подумать, как новые
+            знания могут повлиять на ваше будущее.
+          </p>
+          <p>
+            Проходить бесплатный курс было легко, ибо погружаться в html я
+            начала самостоятельно. Основы я знала и было здорово, когда у меня
+            получалось выполнять задания, которые казались мне раньше, чем то
+            невообразимым, ведь я впервые затронула эту профессию. Начинать было
+            не страшно, а очень интересно! Я хотела и "хочу" изменить свою жизнь
+            связав ее с профессией "фротенд-разработчик".
+          </p>
+        </div>
+        <div class="button__card">
+          <button class="button__card__text">
+            <span class="button__text">Like</span>
+          </button>
+        </div>
+      </article>
+      <article>
+        <h2 class="content__title">1 спринт: Я — чистый лист</h2>
+        <div>
+          <img
+            src="./images/image.png"
+            alt="грузовичок как олицитворение 'тебя' первый спринт"
+          />
+        </div>
+        <div class="content__text__card">
+          <p>
+            На первых этапах мы работали со страхами и сомнениями, которые часто
+            испытывают новички. Один из них — страх перед чистым листом. Это,
+            конечно же, намного сложнее, чем боязнь куска бумаги. Часто за этим
+            ощущением скрываются более глубокие вопросы: с чего начать? а вдруг
+            будет слишком сложно? что, если я не справлюсь?
+          </p>
+          <p>
+            Определенно были такие вопросы, с самого начала, хотя у меня для
+            старта был некоторый опыт, но все равно было волнительно. Первый
+            спринт для меня был большим шагом, того, что я решила сменить
+            профессию на совсем мне незнакомую. Положительных чувств, было очень
+            много, как и страхов.
+          </p>
+        </div>
+        <div class="button__card">
+          <button class="button__card__text">
+            <span class="button__text">Like</span>
+          </button>
+        </div>
+      </article>
+      <article>
+        <h2 class="content__title">1 спринт: А если не получится?</h2>
+        <div>
+          <img
+            src="./images/image.png"
+            alt="грузовичок как олицитворение 'тебя' конец первого спринта"
+          />
+        </div>
+        <div class="content__text__card">
+          <p>
+            Первый проект — позади! Но это всё ещё самое начало пути. Радость
+            могла быстро померкнуть и смениться ожиданием провала. Или вы,
+            наоборот, могли вдохновиться успехами и поверить в себя.
+          </p>
+          <p>
+            Первый проэкт выполненый мной оставил много эмоций! Я не могла
+            поверить, что я это сделала сама! Восторг был неописуем. Вдохновение
+            появилось моментально. Хотя было волнение по первому ревью, не
+            знала, как это пройдет и сколько ошибок будет. Хотелось сделать
+            минимальное колличество, ведь я понимала, что совсем сделать без
+            ошибок нереально на начальном этапе, для новичка.
+          </p>
+        </div>
+        <div class="button__card">
+          <button class="button__card__text">
+            <span class="button__text">Like</span>
+          </button>
+        </div>
+      </article>
+      <article>
+        <h2 class="content__title">2 спринт: Погоня за идеалом</h2>
+        <div>
+          <img
+            src="./images/image.png"
+            alt="грузовичок как олицитворение 'тебя' начало второго спринта"
+          />
+        </div>
+        <div class="content__text__card">
+          <p>
+            На этом этапе вы уже достаточно разбирались в основах вёрстки, чтобы
+            понять, как много ещё впереди. Вы могли попытаться погнаться за
+            идеалом и понять, что он недостижим. А, может, вы вовсе и не
+            подвержены перфекционизму и вместо того, чтобы сделать идеально,
+            старались просто сделать.
+          </p>
+          <p>
+            После первого проэкта, казалось горы по колено, но реальность,
+            оказалась жестокой. Не понимание, принятие себя, долгие раздумия, а
+            как? Но не смотря на это все, проект хотелось сделать не хуже чем
+            первый, даже намного лучше. Ведь материал пройдет, и нужно было
+            реализовать это в проэкте.
+          </p>
+        </div>
+        <div class="button__card">
+          <button class="button__card__text">
+            <span class="button__text">Like</span>
+          </button>
+        </div>
+      </article>
+      <article>
+        <h2 class="content__title">2 спринт: О тех, кто рядом</h2>
+        <div>
+          <img
+            src="./images/image.png"
+            alt="грузовичок как олицитворение 'тебя' конец второго спринта"
+          />
+        </div>
+        <div class="content__text__card">
+          <p>
+            Всё это время вы были не одиноки (хотя, возможно, иногда и
+            чувствовали, что одни против целого мира). Вас окружали
+            одногруппники, команда сопровождения и просто близкие люди, которым
+            можно пожаловаться, если очередной макет просто так не поддавался.
+            Осваивать что-то новое легче, когда рядом есть единомышленники, не
+            правда ли?
+          </p>
+          <p>
+            Благодаря помощи близких, одногруппников, и Яндекс Практикума, на
+            протежение всего времени и до сих пор, у меня получалось не падать
+            духом и идти вперед.
+          </p>
+        </div>
+        <div class="button__card">
+          <button class="button__card__text">
+            <span class="button__text">Like</span>
+          </button>
+        </div>
+      </article>
+      <article>
+        <h2 class="content__title">3 спринт: Обходные стратегии</h2>
+        <div>
+          <img
+            src="./images/image.png"
+            alt="грузовичок как олицитворение 'тебя' начало третьего спринта"
+          />
+        </div>
+        <div class="content__text__card">
+          <p>
+            На этом курсе вы постоянно решали разные задачи. В какой-то момент
+            вам могло показаться, что решения просто иссякли. Значит, пришло
+            время посмотреть на задачу под другим углом.
+          </p>
+          <p>
+            Для меня, третий спринт был почему-то самым сложным. Времени на этот
+            проэкт у меня получилось выделить слишком мало. Нервы были на
+            пределе, и время тоже. Решение все не как не приходили в голову. На
+            этом этапе поддержка наставника и одногруппников помогли мне прийти
+            к правильному решению проблем и посмотреть на задачу под другим
+            углом, для её реализации.
+          </p>
+        </div>
+        <div class="button__card">
+          <button class="button__card__text">
+            <span class="button__text">Like</span>
+          </button>
+        </div>
+      </article>
+      <article>
+        <h2 class="content__title">3 спринт: Когда опускаются руки</h2>
+        <div>
+          <img
+            src="./images/image.png"
+            alt="грузовичок как олицитворение 'тебя' конец третьего спринта"
+          />
+        </div>
+        <div class="content__text__card">
+          <p>
+            Во время учёбы часто возникает чувство, когда не знаешь, за что
+            хвататься. Вроде и проектную пора сдавать, и задачи хочется
+            порешать, и в теории получше разобраться, и жизнь не забыть пожить.
+            В такие моменты очень нужна концентрация. Вспомните, откуда вы её
+            черпали.
+          </p>
+          <p>
+            Когда силы заканчивались и хотелось опустить руки, меня все время
+            вдохновлял близкий человек. И мысли о моем будущем, где я пройдя
+            этот тяжелый путь, стану лучшей версией себя.
+          </p>
+        </div>
+        <div class="button__card">
+          <button class="button__card__text">
+            <span class="button__text">Like</span>
+          </button>
+        </div>
+      </article>
+      <article>
+        <h2 class="content__title">«Сейчас я здесь»</h2>
+        <div>
+          <img
+            src="./images/image.png"
+            alt="грузовичок как олицитворение 'тебя' начало четвертого спринта"
+          />
+        </div>
+        <div class="content__text__card">
+          <p>
+            Сейчас вы уже очень много знаете о вёрстке. Но это только начало.
+            Во-первых, впереди ещё много материала про «красотищу». Во-вторых, с
+            окончанием курса учёба не заканчивается. Вёрстка — это целый мир. И
+            этот мир постоянно меняется. Познать его полностью не получится, но
+            это тот случай, когда важен сам процесс познания. Ведь часто путь —
+            и есть результат.
+          </p>
+          <p>
+            В данный момент оглядываясь назад, я понимаю сколько усилий,
+            стараний, времени, нервов я приложила, чтобы оказаться сегодня на
+            этом этапе. Понимая, что это все сделано не зря! Я горжусь своими
+            достижениями!
+          </p>
+        </div>
+        <div class="button__card">
+          <button class="button__card__text">
+            <span class="button__text">Like</span>
+          </button>
+        </div>
+      </article>
+      <article>
+        <img src="./images/floppy.svg" />
+        <button><use>Сохранить на память</use></button>
+      </article>
+    </main>
     <script src="./scripts/like.js"></script>
   </body>
 </html>
