--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="color-scheme" content="dark light" />
     <title>Закрывающий тег</title>
     <link rel="icon" href="./images/favicon.ico" sizes="any" />
-    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
-    <link rel="mobile-version-icon" href="./images/mobile-version-icon.png" />
+    <link rel="icon" href="./svg/favicon.svg" type="image/svg+xml" />
+    <link rel="mobile-icon" href="./images/mobile-icon.png" />
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/variables.css" />
     <link rel="stylesheet" href="./styles/globals.css" />
@@ -77,7 +77,7 @@
         <div class="button__card content__card__like">
           <button class="card__icon-button">
             <svg
-              class="like__icon"
+              class="like-icon"
               width="39"
               height="36"
               viewBox="0 0 39 36"
@@ -109,7 +109,7 @@
               </g>
             </svg>
           </button>
-          <button class="button__card__text">
+          <button type="button" class="button button__card__text">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -143,7 +143,7 @@
         <div class="button__card">
           <button class="card__icon-button">
             <svg
-              class="like__icon"
+              class="like-icon"
               width="39"
               height="36"
               viewBox="0 0 39 36"
@@ -208,7 +208,7 @@
         <div class="button__card">
           <button class="card__icon-button">
             <svg
-              class="like__icon"
+              class="like-icon"
               width="39"
               height="36"
               viewBox="0 0 39 36"
@@ -274,7 +274,7 @@
         <div class="button__card">
           <button class="card__icon-button">
             <svg
-              class="like__icon"
+              class="like-icon"
               width="39"
               height="36"
               viewBox="0 0 39 36"
@@ -339,7 +339,7 @@
         <div class="button__card">
           <button class="card__icon-button">
             <svg
-              class="like__icon"
+              class="like-icon"
               width="39"
               height="36"
               viewBox="0 0 39 36"
@@ -404,7 +404,7 @@
         <div class="button__card">
           <button class="card__icon-button">
             <svg
-              class="like__icon"
+              class="like-icon"
               width="39"
               height="36"
               viewBox="0 0 39 36"
@@ -468,7 +468,7 @@
         <div class="button__card">
           <button class="card__icon-button">
             <svg
-              class="like__icon"
+              class="like-icon"
               width="39"
               height="36"
               viewBox="0 0 39 36"
@@ -534,7 +534,7 @@
         <div class="button__card">
           <button class="card__icon-button">
             <svg
-              class="like__icon"
+              class="like-icon"
               width="39"
               height="36"
               viewBox="0 0 39 36"
@@ -571,10 +571,30 @@
           </button>
         </div>
       </article>
-      <article>
-        <img src="./images/floppy.svg" />
-        <button><use>Сохранить на память</use></button>
-      </article>
+      <footer class="footer">
+        <button
+          type="button"
+          class="button__text"
+          onclick="window['dialog'].showModal()"
+          aria-controls="dialog"
+        >
+          <svg class="img-floppy" viewBox="0 0 39 39">
+            <use href="./svg/floppy.svg#floppy"></use>
+          </svg>
+          <span class="footer-button">Сохранить на память</span>
+        </button>
+      </footer>
+      <dialog class="dialog" id="dialog">
+        <form class="dialog__content" method="dialog">
+          <svg class="dialog-image" viewBox="0 0 39 39">
+            <use href="./svg/floppy.svg#floppy" />
+          </svg>
+          <p class="dialog__text">Вставьте дискету, чтобы продолжить</p>
+          <button class="dialog__button" type="submit">
+            <span class="button__text">ок</span>
+          </button>
+        </form>
+      </dialog>
     </main>
     <script src="./scripts/like.js"></script>
   </body>
