--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
       </footer>
       <dialog class="dialog" id="dialog">
         <form class="dialog__content" method="dialog">
-          <svg class="dialog-image" viewBox="0 0 39 39">
+          <svg class="dialog-img" viewBox="0 0 39 39">
             <use href="./svg/floppy.svg#floppy" />
           </svg>
           <p class="dialog__text">Вставьте дискету, чтобы продолжить</p>
