--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           </p>
         </div>
         <div class="button__card content__card__like">
-          <button class="card__icon-button">
+          <button type="button" class="card__icon-button">
             <svg
               class="like-icon"
               width="39"
@@ -141,7 +141,7 @@
           </p>
         </div>
         <div class="button__card">
-          <button class="card__icon-button">
+          <button type="button" class="card__icon-button">
             <svg
               class="like-icon"
               width="39"
@@ -175,7 +175,7 @@
               </g>
             </svg>
           </button>
-          <button class="button__card__text">
+          <button type="button" class="button button__card__text">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -206,7 +206,7 @@
           </p>
         </div>
         <div class="button__card">
-          <button class="card__icon-button">
+          <button type="button" class="card__icon-button">
             <svg
               class="like-icon"
               width="39"
@@ -240,7 +240,7 @@
               </g>
             </svg>
           </button>
-          <button class="button__card__text">
+          <button type="button" class="button button__card__text">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -272,7 +272,7 @@
           </p>
         </div>
         <div class="button__card">
-          <button class="card__icon-button">
+          <button type="button" class="card__icon-button">
             <svg
               class="like-icon"
               width="39"
@@ -306,7 +306,7 @@
               </g>
             </svg>
           </button>
-          <button class="button__card__text">
+          <button type="button" class="button button__card__text">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -337,7 +337,7 @@
           </p>
         </div>
         <div class="button__card">
-          <button class="card__icon-button">
+          <button type="button" class="card__icon-button">
             <svg
               class="like-icon"
               width="39"
@@ -371,7 +371,7 @@
               </g>
             </svg>
           </button>
-          <button class="button__card__text">
+          <button type="button" class="button button__card__text">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -402,7 +402,7 @@
           </p>
         </div>
         <div class="button__card">
-          <button class="card__icon-button">
+          <button type="button" class="card__icon-button">
             <svg
               class="like-icon"
               width="39"
@@ -436,7 +436,7 @@
               </g>
             </svg>
           </button>
-          <button class="button__card__text">
+          <button type="button" class="button button__card__text">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -466,7 +466,7 @@
           </p>
         </div>
         <div class="button__card">
-          <button class="card__icon-button">
+          <button type="button" class="card__icon-button">
             <svg
               class="like-icon"
               width="39"
@@ -500,7 +500,7 @@
               </g>
             </svg>
           </button>
-          <button class="button__card__text">
+          <button type="button" class="button button__card__text">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -532,7 +532,7 @@
           </p>
         </div>
         <div class="button__card">
-          <button class="card__icon-button">
+          <button type="button" class="card__icon-button">
             <svg
               class="like-icon"
               width="39"
@@ -566,7 +566,7 @@
               </g>
             </svg>
           </button>
-          <button class="button__card__text">
+          <button type="button" class="button button__card__text">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -590,7 +590,7 @@
             <use href="./svg/floppy.svg#floppy" />
           </svg>
           <p class="dialog__text">Вставьте дискету, чтобы продолжить</p>
-          <button class="dialog__button" type="submit">
+          <button class="button dialog__button" type="submit">
             <span class="button__text">ок</span>
           </button>
         </form>
