--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
       <footer class="footer">
         <button
           type="button"
-          class="button__text"
+          class="save-button "
           onclick="window['dialog'].showModal()"
           aria-controls="dialog"
         >
