--- a/index.html
+++ b/index.html
@@ -573,8 +573,9 @@
       </article>
       <footer class="footer">
         <button
+          class="button"
           type="button"
-          class="save-button "
+          class="save-button"
           onclick="window['dialog'].showModal()"
           aria-controls="dialog"
         >
