changed button class

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               </g>
             </svg>
           </button>
-          <button type="button" class="button button__card__text">
+          <button type="button" class="button card__like-button">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -175,7 +175,7 @@
               </g>
             </svg>
           </button>
-          <button type="button" class="button button__card__text">
+          <button type="button" class="button card__like-button">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -240,7 +240,7 @@
               </g>
             </svg>
           </button>
-          <button type="button" class="button button__card__text">
+          <button type="button" class="button card__like-button">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -306,7 +306,7 @@
               </g>
             </svg>
           </button>
-          <button type="button" class="button button__card__text">
+          <button type="button" class="button card__like-button">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -371,7 +371,7 @@
               </g>
             </svg>
           </button>
-          <button type="button" class="button button__card__text">
+          <button type="button" class="button card__like-button">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -436,7 +436,7 @@
               </g>
             </svg>
           </button>
-          <button type="button" class="button button__card__text">
+          <button type="button" class="button card__like-button">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -500,7 +500,7 @@
               </g>
             </svg>
           </button>
-          <button type="button" class="button button__card__text">
+          <button type="button" class="button card__like-button">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -566,16 +566,15 @@
               </g>
             </svg>
           </button>
-          <button type="button" class="button button__card__text">
+          <button type="button" class="button card__like-button">
             <span class="button__text">Like</span>
           </button>
         </div>
       </article>
       <footer class="footer">
         <button
-          class="button"
           type="button"
-          class="save-button"
+          class="button save-button"
           onclick="window['dialog'].showModal()"
           aria-controls="dialog"
         >
