--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
           <svg class="img-floppy" viewBox="0 0 39 39">
             <use href="./svg/floppy.svg#floppy"></use>
           </svg>
-          <span class="footer-button">Сохранить на память</span>
+          <span class="footer-text">Сохранить на память</span>
         </button>
       </footer>
       <dialog class="dialog" id="dialog">
