--- a/index.html
+++ b/index.html
@@ -66,12 +66,7 @@
             знания могут повлиять на ваше будущее.
           </p>
           <p>
-            Проходить бесплатный курс было легко, ибо погружаться в html я
-            начала самостоятельно. Основы я знала и было здорово, когда у меня
-            получалось выполнять задания, которые казались мне раньше, чем то
-            невообразимым, ведь я впервые затронула эту профессию. Начинать было
-            не страшно, а очень интересно! Я хотела и "хочу" изменить свою жизнь
-            связав ее с профессией "фротенд-разработчик".
+            Место для ваших воспоминаний о начале обучения.
           </p>
         </div>
         <div class="button__card content__card__like">
@@ -133,11 +128,7 @@
             будет слишком сложно? что, если я не справлюсь?
           </p>
           <p>
-            Определенно были такие вопросы, с самого начала, хотя у меня для
-            старта был некоторый опыт, но все равно было волнительно. Первый
-            спринт для меня был большим шагом, того, что я решила сменить
-            профессию на совсем мне незнакомую. Положительных чувств, было очень
-            много, как и страхов.
+            Место для ваших воспоминаний о начале первого спринта.
           </p>
         </div>
         <div class="button__card">
@@ -197,12 +188,7 @@
             наоборот, могли вдохновиться успехами и поверить в себя.
           </p>
           <p>
-            Первый проэкт выполненый мной оставил много эмоций! Я не могла
-            поверить, что я это сделала сама! Восторг был неописуем. Вдохновение
-            появилось моментально. Хотя было волнение по первому ревью, не
-            знала, как это пройдет и сколько ошибок будет. Хотелось сделать
-            минимальное колличество, ведь я понимала, что совсем сделать без
-            ошибок нереально на начальном этапе, для новичка.
+            Место для ваших воспоминаний об окончании первого спринта.
           </p>
         </div>
         <div class="button__card">
@@ -264,11 +250,7 @@
             старались просто сделать.
           </p>
           <p>
-            После первого проэкта, казалось горы по колено, но реальность,
-            оказалась жестокой. Не понимание, принятие себя, долгие раздумия, а
-            как? Но не смотря на это все, проект хотелось сделать не хуже чем
-            первый, даже намного лучше. Ведь материал пройдет, и нужно было
-            реализовать это в проэкте.
+            Место для ваших воспоминаний о начале второго спринта.
           </p>
         </div>
         <div class="button__card">
@@ -331,9 +313,7 @@
             правда ли?
           </p>
           <p>
-            Благодаря помощи близких, одногруппников, и Яндекс Практикума, на
-            протежение всего времени и до сих пор, у меня получалось не падать
-            духом и идти вперед.
+            Место для ваших воспоминаний об окончании второго спринта.
           </p>
         </div>
         <div class="button__card">
@@ -393,12 +373,7 @@
             время посмотреть на задачу под другим углом.
           </p>
           <p>
-            Для меня, третий спринт был почему-то самым сложным. Времени на этот
-            проэкт у меня получилось выделить слишком мало. Нервы были на
-            пределе, и время тоже. Решение все не как не приходили в голову. На
-            этом этапе поддержка наставника и одногруппников помогли мне прийти
-            к правильному решению проблем и посмотреть на задачу под другим
-            углом, для её реализации.
+            Место для ваших воспоминаний о начале третьего спринта.
           </p>
         </div>
         <div class="button__card">
@@ -460,9 +435,7 @@
             черпали.
           </p>
           <p>
-            Когда силы заканчивались и хотелось опустить руки, меня все время
-            вдохновлял близкий человек. И мысли о моем будущем, где я пройдя
-            этот тяжелый путь, стану лучшей версией себя.
+            Место для ваших воспоминаний об окончании третьего спринта.
           </p>
         </div>
         <div class="button__card">
@@ -525,10 +498,7 @@
             и есть результат.
           </p>
           <p>
-            В данный момент оглядываясь назад, я понимаю сколько усилий,
-            стараний, времени, нервов я приложила, чтобы оказаться сегодня на
-            этом этапе. Понимая, что это все сделано не зря! Я горжусь своими
-            достижениями!
+            Место, чтобы остановиться, подумать и написать, что вы чувствуете в этой точке пути.
           </p>
         </div>
         <div class="button__card">
