--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
             <use href="./svg/floppy.svg#floppy" />
           </svg>
           <p class="dialog__text">Вставьте дискету, чтобы продолжить</p>
-          <button class="button dialog__button" type="submit">
+          <button class="button dialog__button" type="menu">
             <span class="button__text">ок</span>
           </button>
         </form>
