--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
         <button
           type="button"
           class="button save-button"
-          onclick="window['dialog'].showModal()"
+          onclick="window['dialog-id'].showModal()"
           aria-controls="dialog"
         >
           <svg class="img-floppy" viewBox="0 0 39 39">
@@ -554,8 +554,8 @@
           <span class="footer-text">Сохранить на память</span>
         </button>
       </footer>
-      <dialog class="dialog" id="dialog">
-        <form class="dialog__content" method="dialog">
+      <dialog class="dialog" id="dialog-id">
+        <form method="dialog" class="dialog__content">
           <svg class="dialog-img" viewBox="0 0 39 39">
             <use href="./svg/floppy.svg#floppy" />
           </svg>
