--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
           type="button"
           class="button save-button"
           onclick="window['dialog-id'].showModal()"
-          aria-controls="dialog"
+          aria-controls="dialog-id"
         >
           <svg class="img-floppy" viewBox="0 0 39 39">
             <use href="./svg/floppy.svg#floppy"></use>
