--- a/index.html
+++ b/index.html
@@ -65,9 +65,7 @@
             основами и настроиться на учёбу. И, возможно, подумать, как новые
             знания могут повлиять на ваше будущее.
           </p>
-          <p>
-            Место для ваших воспоминаний о начале обучения.
-          </p>
+          <p>Место для ваших воспоминаний о начале обучения.</p>
         </div>
         <div class="button__card content__card__like">
           <button type="button" class="card__icon-button">
@@ -127,9 +125,7 @@
             ощущением скрываются более глубокие вопросы: с чего начать? а вдруг
             будет слишком сложно? что, если я не справлюсь?
           </p>
-          <p>
-            Место для ваших воспоминаний о начале первого спринта.
-          </p>
+          <p>Место для ваших воспоминаний о начале первого спринта.</p>
         </div>
         <div class="button__card">
           <button type="button" class="card__icon-button">
@@ -187,9 +183,7 @@
             могла быстро померкнуть и смениться ожиданием провала. Или вы,
             наоборот, могли вдохновиться успехами и поверить в себя.
           </p>
-          <p>
-            Место для ваших воспоминаний об окончании первого спринта.
-          </p>
+          <p>Место для ваших воспоминаний об окончании первого спринта.</p>
         </div>
         <div class="button__card">
           <button type="button" class="card__icon-button">
@@ -249,9 +243,7 @@
             подвержены перфекционизму и вместо того, чтобы сделать идеально,
             старались просто сделать.
           </p>
-          <p>
-            Место для ваших воспоминаний о начале второго спринта.
-          </p>
+          <p>Место для ваших воспоминаний о начале второго спринта.</p>
         </div>
         <div class="button__card">
           <button type="button" class="card__icon-button">
@@ -312,9 +304,7 @@
             Осваивать что-то новое легче, когда рядом есть единомышленники, не
             правда ли?
           </p>
-          <p>
-            Место для ваших воспоминаний об окончании второго спринта.
-          </p>
+          <p>Место для ваших воспоминаний об окончании второго спринта.</p>
         </div>
         <div class="button__card">
           <button type="button" class="card__icon-button">
@@ -372,9 +362,7 @@
             вам могло показаться, что решения просто иссякли. Значит, пришло
             время посмотреть на задачу под другим углом.
           </p>
-          <p>
-            Место для ваших воспоминаний о начале третьего спринта.
-          </p>
+          <p>Место для ваших воспоминаний о начале третьего спринта.</p>
         </div>
         <div class="button__card">
           <button type="button" class="card__icon-button">
@@ -434,9 +422,7 @@
             В такие моменты очень нужна концентрация. Вспомните, откуда вы её
             черпали.
           </p>
-          <p>
-            Место для ваших воспоминаний об окончании третьего спринта.
-          </p>
+          <p>Место для ваших воспоминаний об окончании третьего спринта.</p>
         </div>
         <div class="button__card">
           <button type="button" class="card__icon-button">
@@ -498,7 +484,8 @@
             и есть результат.
           </p>
           <p>
-            Место, чтобы остановиться, подумать и написать, что вы чувствуете в этой точке пути.
+            Место, чтобы остановиться, подумать и написать, что вы чувствуете в
+            этой точке пути.
           </p>
         </div>
         <div class="button__card">
@@ -555,12 +542,15 @@
         </button>
       </footer>
       <dialog class="dialog" id="dialog-id">
-        <form method="dialog" class="dialog__content">
+        <form class="dialog__content">
           <svg class="dialog-img" viewBox="0 0 39 39">
             <use href="./svg/floppy.svg#floppy" />
           </svg>
           <p class="dialog__text">Вставьте дискету, чтобы продолжить</p>
-          <button class="button dialog__button">
+          <button
+            class="button dialog__button"
+            onclick="window['dialog-id'].close()"
+          >
             <span class="button__text">ок</span>
           </button>
         </form>
