--- a/index.html
+++ b/index.html
@@ -541,16 +541,13 @@
           <span class="footer-text">Сохранить на память</span>
         </button>
       </footer>
-      <dialog class="dialog" id="dialog-id">
-        <form class="dialog__content">
-          <svg class="dialog-img" viewBox="0 0 39 39">
-            <use href="./svg/floppy.svg#floppy" />
-          </svg>
-          <p class="dialog__text">Вставьте дискету, чтобы продолжить</p>
-          <button
-            class="button dialog__button"
-            onclick="window['dialog-id'].close()"
-          >
+      <dialog class="dialog" id="dialog-id" class="dialog__content">
+        <svg class="dialog-img" viewBox="0 0 39 39">
+          <use href="./svg/floppy.svg#floppy" />
+        </svg>
+        <p class="dialog__text">Вставьте дискету, чтобы продолжить</p>
+        <form method="dialog" class="dialog__form">
+          <button class="button dialog__button">
             <span class="button__text">ок</span>
           </button>
         </form>
