--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
           <span class="footer-text">Сохранить на память</span>
         </button>
       </footer>
-      <dialog class="dialog" id="dialog-id" class="dialog__content">
+      <dialog class="dialog" id="dialog-id">
         <svg class="dialog-img" viewBox="0 0 39 39">
           <use href="./svg/floppy.svg#floppy" />
         </svg>
